# CuisineRAG

./: .gitignore  Build_Cuisine_Index.ipynb  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cuisine/rag/: MainActivity.kt
app/src/main/java/com/cuisine/rag/ui/: ChatScreen.kt  ChatViewModel.kt
app/src/main/res/values/: themes.xml
core/rag/: build.gradle.kts
core/rag/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
core/rag/src/main/java/com/cuisine/rag/di/: RagModule.kt
core/rag/src/main/java/com/cuisine/rag/llama/: LlamaCppEngine.kt  PromptBuilder.kt
core/rag/src/main/java/com/cuisine/rag/model/: RagState.kt  VectorEntry.kt
core/rag/src/main/java/com/cuisine/rag/repository/: RagRepository.kt
core/rag/src/main/java/com/cuisine/rag/vector/: VectorIndex.kt
core/rag/src/test/java/com/cuisine/rag/: VectorIndexTest.kt
gradle/: libs.versions.toml
